--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
+    {% if title %}
+        <title>Flask Blog - {{ title }}</title>
+    {% else %}
+        <title>Flask Blog</title>
+    {% endif %}
 </head>
 <body>
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
-        <p>By {{ post.author }} on {{ post.data_posted }}</p>
+        <p>By {{ post.author }} on {{ post.date_posted }}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
 </body>
