--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -10,7 +10,7 @@
             </div>
         </div>
 
-        <form method="post" action="">
+        <form method="post" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
@@ -38,6 +38,15 @@
                             </div>
                         {% else %}
                             {{ form.email(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.picture.label() }}
+                        {{ form.picture(class="form-control-file") }}
+                        {% if form.picture.errors %}
+                             {% for error in form.picture.errors %}
+                                 <span class="text-danger">{{ error }}</span></br>
+                             {% endfor %}
                         {% endif %}
                     </div>
             </fieldset>
