update contents for about and sidebar

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>About Page</h1>
+    <h1>A Blog System developed with Python Flask microframework and Jinja2 template engine.</h1>
 {% endblock content %}
